adding list of videos to home
